# california-water

./: .gitignore  Cargo.toml  README.md
california-water/: Cargo.toml
california-water/src/: compression.rs  lib.rs  observation.rs  reservoir.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/cmd/: app.rs  clap.rs
explorer/: .gitignore  Cargo.toml  bootstrap.js  index.css  index.html  index.js
explorer/src/: chart.rs  date.rs  lib.rs
explorer/static/: bootstrap.js
server/src/: main.rs
src/: lib.rs  observation.rs  reservoir.rs
