[package]
name = "california-water"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
chrono = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.11.10"

[dev-dependencies]
tokio-test = "*"