[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.17", features = ["derive"] }
chrono = "0.4.19"
california-water = { path = "../california-water" }
tokio = { version = "1.18.2", features = ["full", "tracing"] }
reqwest = "0.11.10"
futures = "0.3.21"
csv = "1.1.6"
lzma-rs = "0.2.0"